[gd_scene load_steps=4 format=3 uid="uid://dnmrgnw155nln"]

[ext_resource type="Script" uid="uid://qaod1a5vyre2" path="res://scenes/minigame/Minigame.gd" id="1_n02jb"]
[ext_resource type="PackedScene" uid="uid://mm8b0ux5eo3u" path="res://scenes/minigame/PlayerShip.tscn" id="1_wqfxt"]
[ext_resource type="PackedScene" uid="uid://bcv78na2ht52b" path="res://scenes/minigame/Spawner.tscn" id="2_n02jb"]

[node name="Minigame" type="Node2D"]
script = ExtResource("1_n02jb")

[node name="PlayerShip" parent="." instance=ExtResource("1_wqfxt")]

[node name="Spawner" parent="." instance=ExtResource("2_n02jb")]

[node name="Countdown" type="Timer" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2

[node name="TimerBar" type="ProgressBar" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="TimerLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="DebugWinButton" type="Button" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "DebugWin"

[node name="DebugLoseButton" type="Button" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "DebugLose"

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="Control" parent="HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthLabel" type="Label" parent="HUD/HBoxContainer/LeftPanel"]
layout_mode = 0
offset_left = 24.0
offset_top = 148.0
offset_right = 162.0
offset_bottom = 201.5
scale = Vector2(2, 2)
text = "Health: 3"

[node name="PlayfieldOverlay" type="Control" parent="HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="RightPanel" type="Control" parent="HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeartsLabel" type="Label" parent="HUD/HBoxContainer/RightPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_top = 148.0
offset_right = -97.5
offset_bottom = 171.0
grow_horizontal = 0
scale = Vector2(2, 2)
text = "Hearts:"
